# lagent

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-13-lagent-implementation.md
docs/superpowers/specs/: 2026-04-13-lagent-design.md
src/: agent.rs  cli.rs  commands.rs  launchctl.rs  main.rs  scope.rs  state.rs  validate.rs
